--- a/css/style.less
+++ b/css/style.less
@@ -364,4 +364,7 @@ article
     font-family: exo2;
 
     src: url(../fonts/exo2.0.ttf);
+    src: url(../fonts/exo2.0.eot);
+    src: url(../fonts/exo2.0.woff);
+    src: url(../fonts/exo2.0.woff2);
 }
